fix body-container overflow

--- a/src/styles/index.pcss
+++ b/src/styles/index.pcss
@@ -7,7 +7,7 @@
 }
 
 .body-container {
-  @apply overflow-hidden;
+  @apply overflow-x-hidden;
 }
 
 .main-text {
